=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Move to tableless design -kiwipgv- (windmillway)
 - Merged: Merge changes r6012 - r6033 from the trunk. (windmillway)
 - Merged: Merge changes r6007 - r6011 from the trunk. (windmillway)
 - Add missing lists from Main Menu (yalnifj)
 - Changes to try and reduce overall size of pop-up window - It is still too big really. (windmillway)
 - Added: Minor progress with CA - scrolling facility. (windmillway)
 - Merged: Merge changes r5995 - r6006 from the trunk. (windmillway)
 - Change to googlemaps (yalnifj)
 - Merged: Merge changes r5956 - r5994 from the trunk. (windmillway)
 - A few minor updates to /GEDFact_assistant/_CENS/ Census assistant (windmillway)
 - Added "ALL" tab module (yalnifj)
 - This Branch and the Trunk are now both at svn level 5955 (windmillway) 
 - Merged: Correction to pick up missing svn changes - Merge changes r5944 - r5952 from the trunk. (windmillway)
 - Changes arrived during last update, not sure why, but will commit anyway to clean svn. (windmillway)
 - Merged: Merge changes r5915 - r5943 from the trunk. (yalnifj)
 - Added module administration page (yalnifj)
 - Added new module tab and menu system (yalnifj)
 - Removed slideshow module as the lightbox module depricates it (yalnifj)
 - Changed replace dhtmlxtabbar with jquery.ui.tabs, added jquery.ui theme directory to all themes (yalnifj)
 - Merged: Merge changes r5843 - r5914 from the trunk. (windmillway)
 - Merged: Merge changes r5839 - r5842 from the trunk. (windmillway)
 - Removed an unnecessary function, that was also being called multiple times, causing duplicate declaration errors. (windmillway)
 - Merged: Merge changes r5831 - r5838 from the trunk. (windmillway)