@@ -10,6 +10,7 @@
 
 
 Version 4.2.x CA
+ - Reduce Census Assistant pop up window dimentions (now 860x760) (windmillway)
  - Move to tableless design -kiwipgv- (windmillway)
  - Merged: Merge changes r6012 - r6033 from the trunk. (windmillway)
  - Merged: Merge changes r6007 - r6011 from the trunk. (windmillway)
